--- a/MultiRocket-4/index.html
+++ b/MultiRocket-4/index.html
@@ -30,7 +30,7 @@
                     <div class="slideshow-container">
                         <div v-for="i in fix1" class="noSlides">
                             <img :src="planet[0].img" alt="โหลดอยู่ใจเย็น">
-                            <img src="/image/Artboard 322.png" class="human">
+                            <img src="/image/Artboard 322.png" class="human jump0">
                             <div class="showtext">
                                 <p>Name : {{planet[0].name}}</p>
                                 <p>Gravity : {{planet[0].gravity}} m.s <sup>-2</sup> </p>
@@ -54,7 +54,7 @@
                     <div class="slideshow-container">
                         <div v-for="i in fix1" class="noSlides">
                             <img :src="planet[1].img" alt="โหลดอยู่ใจเย็น">
-                            <img src="/image/Artboard 322.png" class="human">
+                            <img src="/image/Artboard 322.png" class="human jump1">
                             <div class="showtext">
                                 <p>Name : {{planet[1].name}}</p>
                                 <p>Gravity : {{planet[1].gravity}} m.s <sup>-2</sup></p>
@@ -80,7 +80,7 @@
                         <div class="mySlides fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[2].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump2">
                                 <div class="showtext">
                                     <p>Name : {{planet[2].name}}</p>
                                     <p>Gravity : {{planet[2].gravity}} m.s <sup>-2</sup></p>
@@ -91,7 +91,7 @@
                         <div class="mySlides fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[2].moons[0].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump20">
                                 <div class="showtext">
                                     <p>Name : {{planet[2].moons[0].name}}</p>
                                     <p>Gravity : {{planet[2].moons[0].gravity}} m.s <sup>-2</sup></p>
@@ -123,7 +123,7 @@
                         <div class="mySlides2 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[3].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump3">
                                 <div class="showtext">
                                     <p>Name : {{planet[3].name}}</p>
                                     <p>Gravity : {{planet[3].gravity}} m.s <sup>-2</sup></p>
@@ -134,7 +134,7 @@
                         <div class="mySlides2 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[3].moons[0].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump30">
                                 <div class="showtext">
                                     <p> Name : {{planet[3].moons[0].name}}</p>
                                     <p>Gravity : {{planet[3].moons[0].gravity}} m.s <sup>-2</sup></p>
@@ -145,7 +145,7 @@
                         <div class="mySlides2 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[3].moons[1].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump31">
                                 <div class="showtext">
                                     <p>Name : {{planet[3].moons[1].name}}</p>
                                     <p>Gravity : {{planet[3].moons[1].gravity}} m.s <sup>-2</sup></p>
@@ -176,7 +176,7 @@
                         <div class="mySlides4 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[4].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump4">
                                 <div class="showtext">
                                     <p>Name : {{planet[4].name}}</p>
                                     <p>Gravity : {{planet[4].gravity}} m.s <sup>-2</sup></p>
@@ -187,7 +187,7 @@
                         <div class="mySlides4 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[4].moons[0].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump40">
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[0].name}}</p>
                                     <p>Gravity : {{planet[4].moons[0].gravity}} m.s <sup>-2</sup></p>
@@ -198,7 +198,7 @@
                         <div class="mySlides4 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[4].moons[1].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump41">
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[1].name}}</p>
                                     <p>Gravity : {{planet[4].moons[1].gravity}} m.s <sup>-2</sup></p>
@@ -209,7 +209,7 @@
                         <div class="mySlides4 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[4].moons[2].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump42">
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[2].name}}</p>
                                     <p>Gravity : {{planet[4].moons[2].gravity}} m.s <sup>-2</sup></p>
@@ -220,7 +220,7 @@
                         <div class="mySlides4 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[4].moons[3].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump43">
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[3].name}}</p>
                                     <p>Gravity : {{planet[4].moons[3].gravity}} m.s <sup>-2</sup></p>
@@ -231,7 +231,7 @@
                         <div class="mySlides4 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[4].moons[4].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump44">
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[4].name}}</p>
                                     <p>Gravity : {{planet[4].moons[4].gravity}} m.s <sup>-2</sup></p>
@@ -242,7 +242,7 @@
                         <div class="mySlides4 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[4].moons[5].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump45">
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[5].name}}</p>
                                     <p>Gravity : {{planet[4].moons[5].gravity}} m.s <sup>-2</sup></p>
@@ -253,7 +253,7 @@
                         <div class="mySlides4 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[4].moons[6].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump46">
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[6].name}}</p>
                                     <p>Gravity : {{planet[4].moons[6].gravity}} m.s <sup>-2</sup></p>
@@ -264,7 +264,7 @@
                         <div class="mySlides4 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[4].moons[7].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump47">
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[7].name}}</p>
                                     <p>Gravity : {{planet[4].moons[7].gravity}} m.s <sup>-2</sup></p>
@@ -275,7 +275,7 @@
                         <div class="mySlides4 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[4].moons[8].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump48">
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[8].name}}</p>
                                     <p>Gravity : {{planet[4].moons[8].gravity}} m.s <sup>-2</sup></p>
@@ -286,7 +286,7 @@
                         <div class="mySlides4 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[4].moons[9].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump49">
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[9].name}}</p>
                                     <p>Gravity : {{planet[4].moons[9].gravity}} m.s <sup>-2</sup></p>
@@ -297,7 +297,7 @@
                         <div class="mySlides4 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[4].moons[10].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump410">
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[10].name}}</p>
                                     <p>Gravity : {{planet[4].moons[10].gravity}} m.s <sup>-2</sup></p>
@@ -308,7 +308,7 @@
                         <div class="mySlides4 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[4].moons[11].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump411">
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[11].name}}</p>
                                     <p>Gravity : {{planet[4].moons[11].gravity}} m.s <sup>-2</sup></p>
@@ -319,7 +319,7 @@
                         <div class="mySlides4 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[4].moons[12].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump412">
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[12].name}}</p>
                                     <p>Gravity : {{planet[4].moons[12].gravity}} m.s <sup>-2</sup></p>
@@ -330,7 +330,7 @@
                         <div class="mySlides4 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[4].moons[13].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump413">
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[13].name}}</p>
                                     <p>Gravity : {{planet[4].moons[13].gravity}} m.s <sup>-2</sup></p>
@@ -360,7 +360,7 @@
                     <div class="slideshow-container">
                         <div v-for="i in fix1" class="noSlides">
                             <img :src="planet[5].img" alt="โหลดอยู่ใจเย็น">
-                            <img src="/image/Artboard 322.png" class="human">
+                            <img src="/image/Artboard 322.png" class="human jump5">
                             <div class="showtext">
                                 <p>Name : {{planet[5].name}}</p>
                                 <p>Gravity : {{planet[5].gravity}} m.s <sup>-2</sup></p>
@@ -385,7 +385,7 @@
                     <div class="slideshow-container">
                         <div v-for="i in fix1" class="noSlides">
                             <img :src="planet[6].img" alt="โหลดอยู่ใจเย็น">
-                            <img src="/image/Artboard 322.png" class="human">
+                            <img src="/image/Artboard 322.png" class="human jump6">
                             <div class="showtext">
                                 <p>Name : {{planet[6].name}}</p>
                                 <p>Gravity : {{planet[6].gravity}} m.s <sup>-2</sup></p>
@@ -410,7 +410,7 @@
                         <div class="mySlides7 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[7].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump7">
                                 <div class="showtext">
                                     <p>Name : {{planet[7].name}}</p>
                                     <p>Gravity : {{planet[7].gravity}} m.s <sup>-2</sup></p>
@@ -421,7 +421,7 @@
                         <div class="mySlides7 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[7].moons[0].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump70">
                                 <div class="showtext">
                                     <p>Name : {{planet[7].moons[0].name}}</p>
                                     <p>Gravity : {{planet[7].moons[0].gravity}} m.s <sup>-2</sup></p>
@@ -432,7 +432,7 @@
                         <div class="mySlides7 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[7].moons[1].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump71">
                                 <div class="showtext">
                                     <p>Name : {{planet[7].moons[1].name}}</p>
                                     <p>Gravity : {{planet[7].moons[1].gravity}} m.s <sup>-2</sup></p>
@@ -443,7 +443,7 @@
                         <div class="mySlides7 fade">
                             <div v-for="i in fix1">
                                 <img :src="planet[7].moons[2].img" alt="โหลดอยู่ใจเย็น">
-                                <img src="/image/Artboard 322.png" class="human">
+                                <img src="/image/Artboard 322.png" class="human jump72">
                                 <div class="showtext">
                                     <p>Name : {{planet[7].moons[2].name}}</p>
                                     <p>Gravity : {{planet[7].moons[2].gravity}} m.s <sup>-2</sup></p>
