--- a/MultiRocket-4/index.html
+++ b/MultiRocket-4/index.html
@@ -6,6 +6,8 @@
     <title></title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- font-->
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
     <!-- swiper -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
@@ -14,9 +16,53 @@
 </head>
 
 <body>
+
     <div id="app">
+        <!-- form -->
+        <div v-if="status_popup" class="popup" onkeypress="check_keyboard(event)"></div>
+        <div class="overlay">
+            <div class="login">
+                <div class="login__inner">
+                    <div class="login__header">
+                        <div class="login__title">
+                            <h1 class="login__heading" data-text="What weight are you on planet ?">What weight are you
+                                on planet ?</h1>
+                        </div>
+                    </div>
+                    <div class="login__content">
+                        <div class="login__form">
+                            <form action="javascript:;" class="form">
+                                <div class="form__group">
+
+                                    <input class="form__input" type="text" name="weight" required v-model="weight">
+                                    <div class="form__input-after"></div>
+                                    <label class="form__label" for="weight" >Weight</label>
+                                </div>
+
+                                <div class="form__group">
+                                        <a href="#section2"><div class="scroll-down-arrow"></div></a>
+                                    <!--<button class="form__btn" type="submit">
+                                        <span class="form__btn-text">Submit</span>
+
+                                    </button>!-->
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!-- form -->
+
+
+
+
+
+
+        <div id="section2">
         <div class="swiper-container">
-            <h1 class="header">Your Weight On Planet!</h1>
+            <h1 class="header">Your Weight On Planet !</h1>
             <div class="swiper-wrapper">
                 <!-- Mercury -->
                 <div class="swiper-slide">
@@ -34,7 +80,7 @@
                             <div class="showtext">
                                 <p>Name : {{planet[0].name}}</p>
                                 <p>Gravity : {{planet[0].gravity}} m.s <sup>-2</sup> </p>
-                                <p>YourWeight : {{ twopointfloat((weight*planet[0].gravity)/9.8) }} k.g</p>
+                                <p>Weight : {{ twopointfloat((weight*planet[0].gravity)/9.8) }} kg</p>
                             </div>
                         </div>
                     </div>
@@ -58,7 +104,7 @@
                             <div class="showtext">
                                 <p>Name : {{planet[1].name}}</p>
                                 <p>Gravity : {{planet[1].gravity}} m.s <sup>-2</sup></p>
-                                <p>YourWeight : {{ twopointfloat((weight*planet[1].gravity)/9.8) }} k.g</p>
+                                <p>Weight : {{ twopointfloat((weight*planet[1].gravity)/9.8) }} kg</p>
                             </div>
                         </div>
                     </div>
@@ -84,7 +130,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[2].name}}</p>
                                     <p>Gravity : {{planet[2].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[2].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[2].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -95,7 +141,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[2].moons[0].name}}</p>
                                     <p>Gravity : {{planet[2].moons[0].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[2].moons[0].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[2].moons[0].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -127,7 +173,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[3].name}}</p>
                                     <p>Gravity : {{planet[3].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[3].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[3].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -138,7 +184,7 @@
                                 <div class="showtext">
                                     <p> Name : {{planet[3].moons[0].name}}</p>
                                     <p>Gravity : {{planet[3].moons[0].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[3].moons[0].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[3].moons[0].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -149,7 +195,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[3].moons[1].name}}</p>
                                     <p>Gravity : {{planet[3].moons[1].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[3].moons[1].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[3].moons[1].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -180,7 +226,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[4].name}}</p>
                                     <p>Gravity : {{planet[4].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[4].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[4].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -191,7 +237,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[0].name}}</p>
                                     <p>Gravity : {{planet[4].moons[0].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[4].moons[0].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[4].moons[0].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -202,7 +248,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[1].name}}</p>
                                     <p>Gravity : {{planet[4].moons[1].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[4].moons[1].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[4].moons[1].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -213,7 +259,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[2].name}}</p>
                                     <p>Gravity : {{planet[4].moons[2].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[4].moons[2].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[4].moons[2].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -224,7 +270,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[3].name}}</p>
                                     <p>Gravity : {{planet[4].moons[3].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[4].moons[3].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[4].moons[3].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -235,7 +281,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[4].name}}</p>
                                     <p>Gravity : {{planet[4].moons[4].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[4].moons[4].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[4].moons[4].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -246,7 +292,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[5].name}}</p>
                                     <p>Gravity : {{planet[4].moons[5].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[4].moons[5].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[4].moons[5].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -257,7 +303,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[6].name}}</p>
                                     <p>Gravity : {{planet[4].moons[6].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[4].moons[6].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[4].moons[6].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -268,7 +314,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[7].name}}</p>
                                     <p>Gravity : {{planet[4].moons[7].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[4].moons[7].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[4].moons[7].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -279,7 +325,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[8].name}}</p>
                                     <p>Gravity : {{planet[4].moons[8].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[4].moons[8].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[4].moons[8].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -290,7 +336,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[9].name}}</p>
                                     <p>Gravity : {{planet[4].moons[9].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[4].moons[9].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[4].moons[9].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -301,7 +347,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[10].name}}</p>
                                     <p>Gravity : {{planet[4].moons[10].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[4].moons[10].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[4].moons[10].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -312,7 +358,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[11].name}}</p>
                                     <p>Gravity : {{planet[4].moons[11].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[4].moons[11].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[4].moons[11].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -323,7 +369,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[12].name}}</p>
                                     <p>Gravity : {{planet[4].moons[12].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[4].moons[12].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[4].moons[12].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -334,7 +380,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[4].moons[13].name}}</p>
                                     <p>Gravity : {{planet[4].moons[13].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[4].moons[13].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[4].moons[13].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -364,7 +410,7 @@
                             <div class="showtext">
                                 <p>Name : {{planet[5].name}}</p>
                                 <p>Gravity : {{planet[5].gravity}} m.s <sup>-2</sup></p>
-                                <p>YourWeight : {{ twopointfloat((weight*planet[5].gravity)/9.8) }} k.g</p>
+                                <p>Weight : {{ twopointfloat((weight*planet[5].gravity)/9.8) }} kg</p>
                             </div>
                         </div>
                     </div>
@@ -389,7 +435,7 @@
                             <div class="showtext">
                                 <p>Name : {{planet[6].name}}</p>
                                 <p>Gravity : {{planet[6].gravity}} m.s <sup>-2</sup></p>
-                                <p>YourWeight : {{ twopointfloat((weight*planet[6].gravity)/9.8) }} k.g</p>
+                                <p>Weight : {{ twopointfloat((weight*planet[6].gravity)/9.8) }} kg</p>
                             </div>
                         </div>
                     </div>
@@ -414,7 +460,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[7].name}}</p>
                                     <p>Gravity : {{planet[7].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[7].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[7].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -425,7 +471,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[7].moons[0].name}}</p>
                                     <p>Gravity : {{planet[7].moons[0].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[7].moons[0].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[7].moons[0].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -436,7 +482,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[7].moons[1].name}}</p>
                                     <p>Gravity : {{planet[7].moons[1].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[7].moons[1].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[7].moons[1].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -447,7 +493,7 @@
                                 <div class="showtext">
                                     <p>Name : {{planet[7].moons[2].name}}</p>
                                     <p>Gravity : {{planet[7].moons[2].gravity}} m.s <sup>-2</sup></p>
-                                    <p>YourWeight : {{ twopointfloat((weight*planet[7].moons[2].gravity)/9.8) }} k.g</p>
+                                    <p>Weight : {{ twopointfloat((weight*planet[7].moons[2].gravity)/9.8) }} kg</p>
                                 </div>
                             </div>
                         </div>
@@ -469,6 +515,7 @@
 
         <div class="swiper-pagination"></div>
     </div>
+</div>
 
 </body>
 
@@ -488,12 +535,12 @@
         data: {
             fix1: {},
             planet: {},
-            weight: 100, //test
+            weight: 0, //test
 
         },
 
         methods: {
-            twopointfloat: function(num) {
+            twopointfloat: function (num) {
                 return num.toFixed(2)
             }
         }
@@ -508,7 +555,7 @@
         pagination: {
             el: '.swiper-pagination',
             clickable: true,
-            renderBullet: function(index, className) {
+            renderBullet: function (index, className) {
                 return '<span class="' + className + '">' + '<img class="imgicon" src="image/' + index + '.png"></img>' + '</span>';
             },
         },
