--- a/MultiRocket-4/index.html
+++ b/MultiRocket-4/index.html
@@ -19,7 +19,7 @@
 
     <div id="app">
         <!-- form -->
-        <div v-if="status_popup" class="popup" onkeypress="check_keyboard(event)"></div>
+        <!-- <div v-if="status_popup" class="popup" onkeypress="check_keyboard(event)"></div> -->
         <div class="overlay">
             <div class="login">
                 <div class="login__inner">
@@ -521,7 +521,7 @@
     </div>
     <div style="margin-left: 5.5%">
         <div class="view view-ninth">
-            <img src="/image/Pearth.jpg" style="width:300px;height:200px;" />
+            <img src="image/Pearth.jpg" style="width:300px;height:200px;" />
             <div class="mask mask-1"></div>
             <div class="mask mask-2"></div>
             <div class="content">
@@ -531,7 +531,7 @@
             </div>
         </div>
         <div class="view view-ninth">
-            <img src="/image/Pvenus.jpg" style="width:300px;height:200px;" />
+            <img src="image/Pvenus.jpg" style="width:300px;height:200px;" />
             <div class="mask mask-1"></div>
             <div class="mask mask-2"></div>
             <div class="content">
@@ -541,7 +541,7 @@
             </div>
         </div>
         <div class="view view-ninth">
-            <img src="/image/Pjupitor.jpg" style="width:300px;height:200px;" />
+            <img src="image/Pjupitor.jpg" style="width:300px;height:200px;" />
             <div class="mask mask-1"></div>
             <div class="mask mask-2"></div>
             <div class="content">
@@ -551,7 +551,7 @@
             </div>
         </div>
         <div class="view view-ninth">
-            <img src="/image/Psaturn.jpg" style="width:300px;height:200px;" />
+            <img src="image/Psaturn.jpg" style="width:300px;height:200px;" />
             <div class="mask mask-1"></div>
             <div class="mask mask-2"></div>
             <div class="content">
@@ -561,7 +561,7 @@
             </div>
         </div>
         <div class="view view-ninth">
-            <img src="/image/Pmercury.jpg" style="width:300px;height:200px;" />
+            <img src="image/Pmercury.jpg" style="width:300px;height:200px;" />
             <div class="mask mask-1"></div>
             <div class="mask mask-2"></div>
             <div class="content">
@@ -571,7 +571,7 @@
             </div>
         </div>
         <div class="view view-ninth">
-            <img src="/image/Pmars.jpg" style="width:300px;height:200px;" />
+            <img src="image/Pmars.jpg" style="width:300px;height:200px;" />
             <div class="mask mask-1"></div>
             <div class="mask mask-2"></div>
             <div class="content">
@@ -581,7 +581,7 @@
             </div>
         </div>
         <div class="view view-ninth">
-            <img src="/image/Puranus.jpg" style="width:300px;height:200px;" />
+            <img src="image/Puranus.jpg" style="width:300px;height:200px;" />
             <div class="mask mask-1"></div>
             <div class="mask mask-2"></div>
             <div class="content">
@@ -591,7 +591,7 @@
             </div>
         </div>
         <div class="view view-ninth">
-            <img src="/image/Pneptune.jpg" style="width:300px;height:200px;" />
+            <img src="image/Pneptune.jpg" style="width:300px;height:200px;" />
             <div class="mask mask-1"></div>
             <div class="mask mask-2"></div>
             <div class="content">
