--- a/MultiRocket-4/index.html
+++ b/MultiRocket-4/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- font-->
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Skranji&display=swap" rel="stylesheet">
     <!-- swiper -->
     <link rel="stylesheet" href="swiper-bundle.min.css">
     <script src="swiper-bundle.min.js"></script>
@@ -25,7 +27,7 @@
                 <div class="login__inner">
                     <div class="login__header">
                         <div class="login__title">
-                            <h1 class="login__heading" data-text="What weight are you on planet ?">What weight are you on planet ?</h1>
+                            <h1 class="login__heading" data-text="what weight are you on planet ?">what weight are you on planet ?</h1>
                         </div>
                     </div>
                     <div class="login__content">
