--- a/งานสถาปัต/index.html
+++ b/งานสถาปัต/index.html
@@ -8,7 +8,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
-    <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -27,18 +28,18 @@
     <div id="app">
 
         <!-- หน้าก่อนเข้าหน้า Home -->
-        <div v-if="what_page == 'Before_Home'">
+        <div v-if="what_page == 'Before_Time_To_Bloom'">
             <img src="Architecture/Page_before entering_home page/logo.gif" class="before">
         </div>
         <!-- หน้าก่อนเข้าหน้า Home -->
 
         <!-- แถบเมนูด้านบน -->
-        <nav v-if="what_page != 'Before_Home'" class="navbar navbar-expand menu">
+        <nav v-if="what_page != 'Before_Time_To_Bloom'" class="navbar navbar-expand menu">
 
             <img src="Architecture/logoweb.png" class="navbar-brand navbar-nav logo_png"
                 @click="change_page('Time_To_Bloom')">
 
-            <ul data-aos="fade-down" v-if="what_page != 'Time_To_Bloom'" class="navbar-nav ml-auto">
+            <ul data-aos="fade-down" v-if="what_page != 'Time_To_Bloom'" class="navbar-nav ml-auto menu_page">
                 <li class="nav-item">
                     <a class="nav-link button" @click="change_page('Home')">Home</a>
                 </li>
@@ -46,7 +47,7 @@
                     <a class="nav-link button" @click="change_page('Law')">Law</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link button" @click="change_page('All cases')">All cases</a>
+                    <a class="nav-link button" @click="change_page('Draf law')">Draf law</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link button" @click="change_page('Contact')">Contact</a>
@@ -56,14 +57,18 @@
         <!-- แถบเมนูด้านบน -->
 
         <!-- หน้า Time_To_Bloom -->
-        <div v-if="what_page == 'Time_To_Bloom'" class="container">
-            <div class="row">
-                <div class="cal-6 time_to_bloom_topic">
+        <div v-if="what_page == 'Time_To_Bloom'" class="container Time_To_Bloom_container">
+            <div class="row Time_To_Bloom_row">
+                <div class="cal-6">
                     <p class="time_to_bloom_text">Discover all<br>about law<br>for women<br>in Thailand</p>
                     <img class="time_to_bloom" src="Architecture/Time_To_Bloom_page/time_to_bloom.png"
                         @click="change_page('Home')">
                 </div>
                 <div class="cal-6">
+                    <!-- <video autoplay muted style="margin: 0;" class="logo_gif">
+                        <source src="test.mp4" type="video/mp4">
+                            Kimetsu no yaiba movie Official Trailer.
+                    </video> -->
                     <img id="gif_home" src="Architecture/Time_To_Bloom_page/final.gif" class="logo_gif">
                 </div>
             </div>
@@ -78,7 +83,7 @@
                 </div>
                 <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6">
                     <p class="topic_text home_topic_text">
-                        {{info.Home[0].LawName}}<br>{{info.Home[0].LawName2}}
+                        {{info.Home[0].LawName}}
                     </p>
                     <p class="text">
                         {{info.Home[0].Mean}}
@@ -89,11 +94,11 @@
 
         <div data-aos="fade-down" data-aos-anchor-placement="top-center" v-if="what_page == 'Home'" class="home_gif2">
             <div v-if="what_page == 'Home'" class="container">
-                <div data-aos-anchor-placement="top-center" data-aos="fade-up" class="container home_text2">
+                <div data-aos-anchor-placement="top-center" data-aos="fade-up" class="home_text2">
                     <p class="topic_text home_topic_text2">
                         {{info.Home[1].LawName}}
                     </p>
-                    <p class="text home_mean2">
+                    <p class="text">
                         {{info.Home[1].Mean}}
                     </p>
                 </div>
@@ -107,25 +112,28 @@
         </div>
         <!-- หน้า Law -->
 
-        <!-- หน้า All cases -->
-        <div v-if="what_page == 'All cases'" class="container">
+        <!-- หน้า Draf law -->
+        <div v-if="what_page == 'Draf law'" class="container">
         </div>
-        <!-- หน้า All cases -->
+        <!-- หน้า Draf law -->
 
         <!-- หน้า Contact -->
-        <div v-if="what_page == 'Contact'" class="container">
+        <div v-if="what_page == 'Contact'" class="container contact_container">
             <div class="row">
                 <div data-aos="fade-right" data-aos-anchor-placement="bottom-bottom" class="col-5 contact">
                     <nav class="navbar navbar-expand contact_menu">
                         <ul class="nav nav-pills" role="tablist">
                             <li class="nav-item">
-                                <a class="nav-link active" data-toggle="pill" href="#" role="tab" aria-selected="true" @click="contact_mean = 0">{{info.Contact[0].CName}}</a>
+                                <a class="nav-link active" data-toggle="pill" href="#" role="tab" aria-selected="true"
+                                    @click="contact_mean = 0">{{info.Contact[0].CName}}</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" data-toggle="pill" href="#" role="tab" aria-selected="false" @click="contact_mean = 1">{{info.Contact[1].CName}}</a>
+                                <a class="nav-link" data-toggle="pill" href="#" role="tab" aria-selected="false"
+                                    @click="contact_mean = 1">{{info.Contact[1].CName}}</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" data-toggle="pill" href="#" role="tab" aria-selected="false" @click="contact_mean = 2">{{info.Contact[2].CName}}</a>
+                                <a class="nav-link" data-toggle="pill" href="#" role="tab" aria-selected="false"
+                                    @click="contact_mean = 2">{{info.Contact[2].CName}}</a>
                             </li>
                         </ul>
                     </nav>
@@ -133,17 +141,26 @@
                         <p>{{info.Contact[contact_mean].Address}}</p>
                         <p>{{info.Contact[contact_mean].Phone}}</p>
                         <p>{{info.Contact[contact_mean].Email}}</p>
-                        <p>Facebook: <a :href="info.Contact[contact_mean].LinkFB" target="_blank">{{info.Contact[contact_mean].FB}}</a></p>
-                        <p>Website: <a :href="info.Contact[contact_mean].Web" target="_blank">{{info.Contact[contact_mean].Web}}</a></p>
+                        <p>Facebook: <a :href="info.Contact[contact_mean].LinkFB"
+                                target="_blank">{{info.Contact[contact_mean].FB}}</a></p>
+                        <p>Website: <a :href="info.Contact[contact_mean].Web"
+                                target="_blank">{{info.Contact[contact_mean].Web}}</a></p>
                     </div>
                 </div>
-                <div data-aos="fade-left" data-aos-anchor-placement="bottom-bottom" class="col-7">
+                <div data-aos="fade-left" data-aos-anchor-placement="top-center" class="col-7" style="
+                height: 700px;">
                     <iframe v-if="contact_mean == 0"
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15483.088801953883!2d100.75716!3d14.031513!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x92513d71fa2aabf1!2z4Lih4Li54Lil4LiZ4Li04LiY4Li0IOC4m-C4p-C4teC4k-C4siDguKvguIfguKrguIHguLjguKUg4LmA4Lie4Li34LmI4Lit4LmA4LiU4LmH4LiB4LmB4Lil4Liw4Liq4LiV4Lij4Li1!5e0!3m2!1sth!2sth!4v1603780240501!5m2!1sth!2sth"
                         width="700" height="700" frameborder="0" style="border:0;" allowfullscreen=""
                         aria-hidden="false" tabindex="0"></iframe>
-                    <iframe v-if="contact_mean == 1" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15499.778348702363!2d100.549197!3d13.782214!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1e74e8b1c0b10fac!2zQWN0aW9uQWlkIFRoYWlsYW5kICjguYHguK3guYfguITguIrguLHguYjguJnguYDguK3guJQg4Lib4Lij4Liw4LmA4LiX4Lio4LmE4LiX4LiiKQ!5e0!3m2!1sth!2sth!4v1603780300411!5m2!1sth!2sth" width="700" height="700" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                    <iframe v-if="contact_mean == 2" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15497.802108053562!2d100.5661086!3d13.8119642!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfc6ba2124b2cff05!2sAmnesty%20International%20Thailand!5e0!3m2!1sth!2sth!4v1603780329645!5m2!1sth!2sth" width="700" height="700" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>                
+                    <iframe v-if="contact_mean == 1"
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15499.778348702363!2d100.549197!3d13.782214!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1e74e8b1c0b10fac!2zQWN0aW9uQWlkIFRoYWlsYW5kICjguYHguK3guYfguITguIrguLHguYjguJnguYDguK3guJQg4Lib4Lij4Liw4LmA4LiX4Lio4LmE4LiX4LiiKQ!5e0!3m2!1sth!2sth!4v1603780300411!5m2!1sth!2sth"
+                        width="700" height="700" frameborder="0" style="border:0;" allowfullscreen=""
+                        aria-hidden="false" tabindex="0"></iframe>
+                    <iframe v-if="contact_mean == 2"
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15497.802108053562!2d100.5661086!3d13.8119642!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfc6ba2124b2cff05!2sAmnesty%20International%20Thailand!5e0!3m2!1sth!2sth!4v1603780329645!5m2!1sth!2sth"
+                        width="700" height="700" frameborder="0" style="border:0;" allowfullscreen=""
+                        aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
         </div>
@@ -204,9 +221,9 @@
         el: '#app',
         data: {
             info: {},
-            what_page: "Before_Home",
+            what_page: "Before_Time_To_Bloom",
             final_page: false,
-            contact_mean:0,
+            contact_mean: 0,
         },
         methods: {
             change_page: function (page) {
@@ -214,7 +231,11 @@
                 document.title = app.what_page;
                 if (page == "Home") {
                     this.final_page = true;
+                    this.hidden_or_show_scroll_bar(true);
                     document.documentElement.style.setProperty("--home_img2", 'url("Architecture/Home_page/giflaw2.gif")');
+                }
+                else if (page == "Contact" || page == "Before_Time_To_Bloom" || page == "Time_To_Bloom") {
+                    this.hidden_or_show_scroll_bar(false);
                 }
                 else if (page != "Time_To_Bloom") {
                     this.final_page = false;
@@ -223,6 +244,13 @@
                     this.final_page = false;
                     document.title = "Time To Bloom";
                     // document.getElementById("gif_home").src = "Architecture/Time_To_Bloom_page/final.gif";
+                }
+            },
+            hidden_or_show_scroll_bar: function (boo) {
+                if (boo) {
+                    document.documentElement.style.setProperty("--overflow", 'auto');
+                } else {
+                    document.documentElement.style.setProperty("--overflow", 'hidden');
                 }
             }
         }
