--- a/MultiRocket-4/index.html
+++ b/MultiRocket-4/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Skranji&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
     <!-- swiper -->
     <link rel="stylesheet" href="swiper-bundle.min.css">
     <script src="swiper-bundle.min.js"></script>
