--- a/งานสถาปัต/index.html
+++ b/งานสถาปัต/index.html
@@ -69,9 +69,9 @@
                         @click="change_page('Home')">
                 </div>
                 <div class="cal-6">
-                <video autoplay muted style="margin: 0;" class="Time_To_Bloom_bg_vdo">
-                    <source src="finalแก้.mp4" type="video/mp4">
-                </video>
+                    <video autoplay muted style="margin: 0;" class="Time_To_Bloom_bg_vdo">
+                        <source src="finalแก้.mp4" type="video/mp4">
+                    </video>
                 </div>
                 <!-- <div class="cal-6"> -->
                 <!-- <img id="gif_home" src="Architecture/Time_To_Bloom_page/final.gif" class="logo_gif"> -->
@@ -89,7 +89,8 @@
                     </video>
                     <!-- <img :src="info.Home[0].Img" class="home_gif1"> -->
                 </div>
-                <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6" style="padding-left: 99px; padding-right: -99px;">
+                <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6"
+                    style="padding-left: 99px; padding-right: -99px;">
                     <p class="topic_text home_topic_text">
                         {{info.Home[0].LawName}}
                     </p>
@@ -173,20 +174,16 @@
                                 target="_blank">{{info.Contact[contact_mean].Web}}</a></p>
                     </div>
                 </div>
-                <div data-aos="fade-left" data-aos-anchor-placement="top-center" class="col-7" style="
-                height: 710px;">
-                    <iframe v-if="contact_mean == 0"
+                <div data-aos="fade-left" data-aos-anchor-placement="top-center" class="col-7 test">
+                    <iframe v-if="contact_mean == 0" class="test"
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15483.088801953883!2d100.75716!3d14.031513!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x92513d71fa2aabf1!2z4Lih4Li54Lil4LiZ4Li04LiY4Li0IOC4m-C4p-C4teC4k-C4siDguKvguIfguKrguIHguLjguKUg4LmA4Lie4Li34LmI4Lit4LmA4LiU4LmH4LiB4LmB4Lil4Liw4Liq4LiV4Lij4Li1!5e0!3m2!1sth!2sth!4v1603780240501!5m2!1sth!2sth"
-                        width="712" height="710" frameborder="0" style="border:0;" allowfullscreen=""
-                        aria-hidden="false" tabindex="0"></iframe>
-                    <iframe v-if="contact_mean == 1"
+                        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    <iframe v-if="contact_mean == 1" class="test"
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15499.778348702363!2d100.549197!3d13.782214!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1e74e8b1c0b10fac!2zQWN0aW9uQWlkIFRoYWlsYW5kICjguYHguK3guYfguITguIrguLHguYjguJnguYDguK3guJQg4Lib4Lij4Liw4LmA4LiX4Lio4LmE4LiX4LiiKQ!5e0!3m2!1sth!2sth!4v1603780300411!5m2!1sth!2sth"
-                        width="712" height="710" frameborder="0" style="border:0;" allowfullscreen=""
-                        aria-hidden="false" tabindex="0"></iframe>
-                    <iframe v-if="contact_mean == 2"
+                        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    <iframe v-if="contact_mean == 2" class="test"
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15497.802108053562!2d100.5661086!3d13.8119642!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xfc6ba2124b2cff05!2sAmnesty%20International%20Thailand!5e0!3m2!1sth!2sth!4v1603780329645!5m2!1sth!2sth"
-                        width="712" height="710" frameborder="0" style="border:0;" allowfullscreen=""
-                        aria-hidden="false" tabindex="0"></iframe>
+                        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
         </div>
