--- a/งานสถาปัต/index.html
+++ b/งานสถาปัต/index.html
@@ -90,7 +90,7 @@
                     <!-- <img :src="info.Home[0].Img" class="home_gif1"> -->
                 </div>
                 <div data-aos-anchor-placement="top-center" data-aos="fade-left" class="col-6"
-                    style="padding-left: 99px; padding-right: -99px;">
+                    style="padding-left: 5.15625vw; padding-right: -5.15625vw;">
                     <p class="topic_text home_topic_text">
                         {{info.Home[0].LawName}}
                     </p>
