--- a/งานสถาปัต/index.html
+++ b/งานสถาปัต/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="cal-6">
                     <video autoplay muted style="margin: 0;" class="Time_To_Bloom_bg_vdo">
-                        <source src="finalแก้.mp4" type="video/mp4">
+                        <source src="final3.mp4" type="video/mp4">
                     </video>
                 </div>
                 <!-- <div class="cal-6"> -->
@@ -104,7 +104,7 @@
         <div data-aos="fade-down" data-aos-anchor-placement="top-center" v-if="what_page == 'Home'">
 
             <video autoplay muted style="margin: 0;" class="home_bg_vdo2">
-                <source src="Architecture/solve/homepage/กรอบ.mp4" type="video/mp4">
+                <source src="Architecture/solve/homepage/กรอบ3.mp4" type="video/mp4">
                 <!-- <source src="Architecture/solve/homepage/กรอบรูป.mp4" type="video/mp4"> -->
             </video>
             <div v-if="what_page == 'Home'" class="container">
