--- a/Arc/index.html
+++ b/Arc/index.html
@@ -108,7 +108,7 @@
                 <!-- <source src="Architecture/solve/homepage/กรอบรูป.mp4" type="video/mp4"> -->
             </video>
             <div v-if="what_page == 'Home'" class="container">
-                <div data-aos-anchor-placement="top-center" data-aos="fade-up" class="home_text2">
+                <div data-aos-anchor-placement="top-center" data-aos="fade-down" class="home_text2">
                     <p class="topic_text home_topic_text2">
                         {{info.Home[1].LawName}}
                     </p>
