--- a/Arc/index.html
+++ b/Arc/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="cal-6">
                     <video autoplay muted style="margin: 0;" class="Time_To_Bloom_bg_vdo">
-                        <source src="final3.mp4" type="video/mp4">
+                        <source src="final3 - Copy.mp4" type="video/mp4">
                     </video>
                 </div>
                 <!-- <div class="cal-6"> -->
